# juxtapoly

./: 404.html  AUTHORS.md  HISTORY.md  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: codeql-analysis.yml  main.yml
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  getting-started.md  index.md
getting-started/: index.html
license/: index.html
search/: search_index.json
tests/: test_juxtapoly.py
usage/: index.html
