[tool.poetry]
name = "juxtapoly"
version = "0.1.0"
description = "Juxtapoly is a tool for comparing data fast. It supports a variety of formats, including CSV, JSON, and RDBMS."
authors = ["Naveen Thurimerla <nawinto99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = {version = "^1.2.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
